# archie

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
assets/branding/: README.md
config/: config.yaml  logging.yaml
docs/: 02_ARCHITECTURE.md  05_DEVELOPMENT_LOG.md  06_ROADMAP.md  07_DESIGN_DECISIONS.md  ARCHITECTURE.md
src/archie/app/: __init__.py  application.py  banner.py  bootstrap.py  metadata.py  repl.py  runtime.py  service_manager.py
src/archie/brain/: __init__.py  base.py  exceptions.py  message.py  ollama.py  response.py
src/archie/config/: __init__.py  base.py  config.yaml  exceptions.py  manager.py  models.py
src/archie/container/: __init__.py  application.py
src/archie/conversation/: __init__.py  conversation.py
src/archie/logging/: __init__.py  logger.py  manager.py
src/archie/models/: __init__.py  base.py
src/archie/personality/: __init__.py  manager.py  prompt.txt
src/archie/services/: __init__.py  base.py  exceptions.py
tests/: test_bootstrap.py  test_logging.py
