[project]
name = "archie"
version = "0.1.0"
description = "A modular, local-first AI platform."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0",
    "rich>=14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "ruff>=0.12",
    "basedpyright>=1.31",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.basedpyright]
typeCheckingMode = "recommended"

include = ["src"]

extraPaths = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/archie"]
