[project]
name = "archie"
version = "0.1.0"
description = "A modular, local-first AI platform."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0",
    "rich>=14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "ruff>=0.12",
    "basedpyright>=1.31",
    "pytest-asyncio>=1.4.0",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.basedpyright]
typeCheckingMode = "recommended"

include = ["src"]

extraPaths = ["src"]

reportAny = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/archie"]
